Bug 33906 - Class ".Z3988" is rendered invisible in both mobile wikipedia and android-app for WP without cause.

--- a/stylesheets/blackberry.css
+++ b/stylesheets/blackberry.css
@@ -143,7 +143,7 @@ h2 {
 	width: 1px;
 }
 
-.printonly, .geo-multi-punct, .geo-nondefault, .Z3988 {
+.printonly, .geo-multi-punct, .geo-nondefault {
 	display: none;
 }
 
