--- a/stylesheets/webkit.css
+++ b/stylesheets/webkit.css
@@ -139,7 +139,7 @@ h2 {
 	width: 1px;
 }
 
-.printonly, .geo-multi-punct, .geo-nondefault, .Z3988 {
+.printonly, .geo-multi-punct, .geo-nondefault {
 	display: none;
 }
 
