--- a/stylesheets/wii.css
+++ b/stylesheets/wii.css
@@ -144,7 +144,7 @@ h2 {
 	width: 1px;
 }
 
-.printonly, .geo-multi-punct, .geo-nondefault, .Z3988 {
+.printonly, .geo-multi-punct, .geo-nondefault {
 	display: none;
 }
 
